...
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/routine_name"
        app:layout_constraintStart_toEndOf="@+id/routine_name"
        app:layout_constraintTop_toTopOf="@+id/routine_name" />

    <Button
        android:id="@+id/start_routine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        android:text="Start Routine"
...
