...
        android:layout_marginEnd="15dp"
        android:text="Pause"
        android:background="@drawable/rounded_button_background"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stop_timer_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop_timer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="413dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/routine_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/actual_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="0"
            android:textSize="34sp"
            android:textStyle="bold"
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="of"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/expected_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expected_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/routine_name_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Routine Name"
            android:textSize="34sp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/task_page" />

    <Button
        android:id="@+id/add_task_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="Add Task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_routine_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_list" />

    <Button
        android:id="@+id/end_routine_button"
        android:layout_width="0dp"
...
